# toxicblend.rs

./: .gitignore  Cargo.toml  README.md  build.rs  install_blender.macos.py.txt
.github/workflows/: clippy.yml  rust.yml
benches/: bench.rs
blender_addon/: install_as_blender_addon.md  toxicblend_adddragoncurve.py  toxicblend_lsystem.py  toxicblend_meshtools.py  toxicblend_metavolume.py  toxicblend_object_add.py  toxicblend_pb2.py
blender_addon/toxicblend/: toxicblend_pb2.py  toxicblend_pb2_grpc.py
proto/: generate_python.sh.txt  toxicblend.proto
proto/pip/: setup.py
proto/pip/toxicblend/: __init__.py  toxicblend_pb2.py  toxicblend_pb2_grpc.py
src/: .rustfmt.toml  client.rs  cmd_2d_outline.rs  cmd_bb_sdf.rs  cmd_bb_voxel.rs  cmd_centerline.rs  cmd_centerline_mesh.rs  cmd_dragon_curve.rs  cmd_fsn_mavoxel.rs  cmd_fsn_sdf.rs  cmd_fsn_voxel.rs  cmd_gyroid.rs  cmd_knife_intersect.rs  cmd_lsystems.rs  cmd_saft_sdf.rs  cmd_saft_voxel.rs  cmd_sdf.rs  cmd_simplify.rs  cmd_voronoi.rs  cmd_voronoi_mesh.rs  cmd_voronoi_mesh_2.rs  cmd_voxel.rs  lib.rs  lsystems_3d.rs  server.rs  type_utils.rs  voronoi_utils.rs
