[package]
name = "toxicblend"
version = "0.0.17"
authors = ["eadf"]
edition = "2021"
description = "gRPC based Blender-addons. WIP"
readme = "README.md"
repository = "https://github.com/eadf/toxicblend.rs"
license = "AGPL-3.0"
keywords = ["blender-addon", "centerline", "voronoi", "Lindenmayer_3d"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
]

[features]
# This is for debugging purposes, will place small blobs at each corner of each bb voxel chunk
display_chunks = []
# enable the saft mesher backend
saft = ["saft_cr", "glam_saft"]

[dependencies]
tonic = "0.5"
prost = "0.8"
ahash = "0.7"
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
linestring = "0.7"
centerline = "0.6"
vob = "3.0"
boostvoronoi = "0.9.2"
rayon = "1.5"
smallvec = "^1.6.1"
cgmath = "0.18"
itertools = "0.10"
logos = "0.12"
arrayvec = "0.7"
ilattice = { version="0.1", default-features = false, features = ["glam"]}
fast-surface-nets = "0.1"
saft_cr = { package="saft", version="0.23", optional = true, features = ["with_rayon"]}
# The glam version used by saft/macaw
glam_saft = { package="glam", version="0.18", optional = true}
glam = "0.19"
bytemuck = "1.7"

[[bin]]
name = "toxicblend_server"
path = "src/server.rs"

[build-dependencies]
tonic-build = "0.5"
version_check = "0.9"

[profile.release]
lto = true

[badges]
maintenance = { status = "actively-developed" }
