[package]
name = "toxicblend"
version = "0.0.19"
authors = ["eadf <lacklustr@protonmail.com>"]
edition = "2021"
description = "gRPC based Blender-addons. WIP"
readme = "README.md"
repository = "https://github.com/eadf/toxicblend.rs"
license = "AGPL-3.0"
keywords = ["blender-addon", "centerline", "voronoi", "Lindenmayer_3d"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
]

[features]
# This is for debugging purposes, will place small blobs at each corner of each bb voxel chunk
display_chunks = []
# enable the saft mesher backend
saft = ["saft_cr", "glam_saft"]

[dependencies]
tonic = "0.6"
prost = "0.9"
ahash = "0.7"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
linestring = "0.7"
centerline = "0.6"
vob = "3.0"
boostvoronoi = "0.9.3"
rayon = "1.5"
smallvec = "1.7"
cgmath = "0.18"
itertools = "0.10"
logos = "0.12"
arrayvec = "0.7"
ilattice = { version="0.1", default-features = false, features = ["glam"]}
fast-surface-nets = "0.1"
bytemuck = "1.7"
saft_cr = { package="saft", version="0.25", optional = true, features = ["with_rayon"]}
# The glam version used by saft/macaw (the glam version used by ilattice is "pub use", and picked up from there)
glam_saft = { package="glam", version="0.18", optional = true}

[[bin]]
name = "toxicblend_server"
path = "src/server.rs"

[build-dependencies]
tonic-build = "0.6"
version_check = "0.9"

[profile.release]
lto = true

[badges]
maintenance = { status = "actively-developed" }
