[package]
name = "toxicblend"
version = "0.0.22"
authors = ["eadf <lacklustr@protonmail.com>"]
edition = "2021"
description = "gRPC based Blender-addons. WIP"
readme = "README.md"
repository = "https://github.com/eadf/toxicblend.rs"
license = "AGPL-3.0"
keywords = ["blender-addon", "centerline", "voronoi", "lindenmayer", "voxel"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
]

[features]
# This is for debugging purposes, will place voxels at each chunk corner
display_chunks = []
# enables the saft mesher backend
saft = ["saft_cr", "macaw"]

[dependencies]
tonic = "~0.6"
prost = "~0.9"
ahash = "0.8"
tokio = { version = "~1.15", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
linestring = "0.8.1"
centerline = "0.7.1"
vob = "3.0"
boostvoronoi = {version="0.11",features=["cgmath"]}
rayon = "1.8"
smallvec = "1.7"
cgmath = "~0.18"
itertools = "0.12"
logos = "0.13"
ilattice = { version="~0.1", default-features = false, features = ["glam"]}
fast-surface-nets = "~0.1"
bytemuck = "~1.7"
saft_cr = { package="saft", version="~0.27", optional = true, features = ["with_rayon"]}
# We import macaw to get at the glam version used by saft
macaw = { package="macaw", version="~0.15", optional = true}

[[bin]]
name = "toxicblend_server"
path = "src/server.rs"

[build-dependencies]
tonic-build = "~0.6"
version_check = "~0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true

[badges]
maintenance = { status = "actively-developed" }
